src/tokens/themes/default.css
:root,
.theme-default {
  --color-background: var(--gray50);
  --shadow-focus-primary: 0 0 0 2px var(--color-white), 0 0 2px 5px var(--blue800);

  /* primary */
  --color-active-primary: var(--blue400);
  --color-hover-primary: var(--blue800);
  --color-pressed-primary: var(--blue400);
  --color-primary01: var(--blue500);
  --color-primary02: var(--blue25);
  --color-primary03: var(--blue50);

  /* secondary */
  --color-active-secondary: var(--red400);
  --color-hover-secondary: var(--red800);
  --color-pressed-secondary: var(--red400);
  --color-secondary01: var(--red500);
  --color-secondary02: var(--red25);
  --color-secondary03: var(--red50);
  --color-button-secondary: var(--color-surface01);

  /* surface */
  --color-surface01: var(--color-white);
  --color-surface02: var(--gray100);
  --color-surface03: var(--gray300);
  --color-surface04: var(--gray700);
  --color-surface05: var(--gray900);

  /* text */
  --color-default-text: var(--gray900);
  --color-hover-text: var(--gray800);
  --color-pressed-text: var(--gray700);
  --color-text-inverse: var(--color-white);
  --color-text02: var(--gray100);
  --color-text03: var(--gray300);
  --color-text05: var(--gray500);

  /* disabled */
  --color-disabled01: var(--gray300);
  --color-disabled02: var(--gray100);
  --color-disabled03: var(--gray500);

  /* icons */
  --color-active-primary-icon: var(--blue400);
  --color-default-icon: var(--gray900);
  --color-disabled01-icon: var(--gray300);
  --color-disabled02-icon: var(--gray100);
  --color-disabled03-icon: var(--gray500);
  --color-hover-icon: var(--color-black);
  --color-hover-primary-icon: var(--blue800);
  --color-inverse-icon: var(--color-white);
  --color-pressed-icon: var(--gray700);
  --color-primary01-icon: var(--blue500);

  /* alert */
  --color-default-error: var(--red500);
  --color-default-success: var(--green500);
  --color-default-warning: var(--yellow500);
  --color-hover-error: var(--red800);
  --color-hover-success: var(--green800);
  --color-hover-warning: var(--yellow800);
  --color-inverse-error: var(--red50);
  --color-inverse-hover-error: var(--red500);
  --color-inverse-hover-success: var(--green500);
  --color-inverse-hover-warning: var(--yellow500);
  --color-inverse-success: var(--green50);
  --color-inverse-warning: var(--yellow50);

  /* forms */
  --color-form-active-primary: var(--blue400);
  --color-form-background: var(--color-white);
  --color-form-default-icon: var(--gray900);
  --color-form-default-text: var(--gray900);
  --color-form-disabled-text: var(--gray500);
  --color-form-disabled01-icon: var(--gray500);
  --color-form-disabled03: var(--gray500);
  --color-form-hover-error: var(--red800);
  --color-form-hover-primary: var(--blue800);
  --color-form-hover-success: var(--green800);
  --color-form-hover-warning: var(--yellow800);
  --color-form-inverse-error: var(--red50);
  --color-form-inverse-success: var(--green50);
  --color-form-inverse-warning: var(--yellow50);
  --color-form-placeholder-text: var(--gray500);
  --color-form-success01: var(--green500);
  --color-form-surface03: var(--gray200);
  --color-form-surface04: var(--gray600);
  --color-form-warning01: var(--yellow500);

  /* links */
  --color-text-link-blue: var(--blue500);
  --color-text-link-blue-hover: var(--blue800);
  --color-text-link-blue-active: var(--blue800);
  --color-text-link-blue-visited: var(--blue800);
  --color-text-link-blue-pressed: var(--blue400);
  --color-text-link-red: var(--red500);
  --color-text-link-red-hover: var(--red800);
  --color-text-link-red-active: var(--red800);
  --color-text-link-red-visited: var(--red800);
  --color-text-link-red-pressed: var(--red400);
  --color-text-link-inverse: var(--color-white);
  --color-text-link-default: var(--gray900);
}

